<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/light_grey"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="3dp">


            <Button
                android:id="@+id/tv_canvasName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/canvas"
                android:textSize="25sp"
                android:textStyle="italic"
                android:textColor="@color/black"
                android:padding="0dp"
                android:backgroundTint="@color/light_grey"
                android:contentDescription="@string/changeCanvasName"/>

        <FrameLayout
            android:id="@+id/fl_drawing_container"
            android:layout_width="333dp"
            android:layout_height="584dp"
            android:layout_margin="10dp"
            android:padding="0dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/btn_brushSizePicker"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.example.drawingapp.DrawingView
                android:id="@+id/drawing_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                 />
        </FrameLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:orientation="horizontal"
            >

            <ImageButton
                android:id="@+id/btn_undo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_launcher_background"
                android:contentDescription="@string/btnundo"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                />
            <ImageButton
                android:id="@+id/btn_brushSizePicker"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_launcher_foreground"
                android:contentDescription="@string/btnbrushsizepicker"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                />
            <ImageButton
                android:id="@+id/btn_brushColorPicker"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_launcher_foreground"
                android:background="@color/black"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/btnbrushcolorpicker"
                />
            <ImageButton
                android:id="@+id/btn_layers"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_launcher_foreground"
                android:background="@color/ui_primary"
                android:contentDescription="@string/btnlayers"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                />
            <ImageButton
                android:id="@+id/btn_saveCanvas"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_launcher_foreground"
                android:background="@color/white"
                android:contentDescription="@string/btnsavecanvas"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                />
            <ImageButton
                android:id="@+id/btn_redo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_launcher_background"
                android:contentDescription="@string/btnredo"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                />


        </LinearLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>