<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_margin="15dp"
    android:padding="5dp">
    <TextView
        android:id="@+id/dialog_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/canvasGetName"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        />
    <EditText
        android:id="@+id/tv_changeCanvaName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/canvas"
        android:textColor="@color/ui_primary"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="italic"
        android:layout_margin="10dp"
        android:maxLength="30"
        />
    <Button
        android:id="@+id/btn_canvasNameEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginTop="20dp"
        android:text="@string/enter"
        android:backgroundTint="@color/ui_primary"/>

</LinearLayout>